HelloUltraviolet/Fixtures/RejectedSource/Expressions/IndexClassification/Source/Main.uv
//! Rejected index specimen for fixed-array index classification.

public procedure indexClassificationReference(index: usize) -> i32 {
    let values: [i32; 2] = [1, 2]
    return values[index]
}
